--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -85,6 +85,7 @@
             app:layout_constraintTop_toBottomOf="@id/task_title" />
 
         <ImageButton
+            android:contentDescription="@string/recording"
             android:id="@+id/img_mic"
             android:layout_width="@dimen/dimen_50"
             android:layout_height="@dimen/dimen_50"
@@ -96,6 +97,7 @@
             app:layout_constraintTop_toBottomOf="@id/task_description" />
 
         <ImageButton
+            android:contentDescription="@string/play"
             android:id="@+id/img_play"
             android:layout_width="@dimen/dimen_25"
             android:layout_height="@dimen/dimen_25"
