--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         tools:context=".ui.activities.main.MainActivity">
 
         <ImageView
+            android:contentDescription="@string/project_name"
             android:id="@+id/logo_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,6 +66,7 @@
             app:layout_constraintTop_toBottomOf="@id/logo_img">
 
             <ImageView
+                android:contentDescription="@string/my_project"
                 android:layout_width="@dimen/dimen_50"
                 android:layout_height="@dimen/dimen_50"
                 android:layout_marginStart="@dimen/dimen_8"
@@ -76,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_14"
                 android:layout_marginTop="@dimen/dimen_8"
-                android:text="My Project"
+                android:text="@string/my_project"
                 android:textColor="@color/textColorPrimaryInverse"
                 android:textSize="@dimen/text_size_16" />
         </LinearLayout>
@@ -95,6 +97,7 @@
             app:layout_constraintTop_toTopOf="@id/my_projects_container">
 
             <ImageView
+                android:contentDescription="@string/new_project"
                 android:layout_width="@dimen/dimen_50"
                 android:layout_height="@dimen/dimen_50"
                 android:layout_marginStart="@dimen/dimen_8"
@@ -106,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_14"
                 android:layout_marginTop="@dimen/dimen_8"
-                android:text="New Project"
+                android:text="@string/new_project"
                 android:textColor="@color/textColorPrimaryInverse"
                 android:textSize="@dimen/text_size_16" />
         </LinearLayout>
@@ -124,6 +127,7 @@
             app:layout_constraintTop_toBottomOf="@id/my_projects_container">
 
             <ImageView
+                android:contentDescription="@string/my_settings"
                 android:layout_width="@dimen/dimen_50"
                 android:layout_height="@dimen/dimen_50"
                 android:layout_marginStart="@dimen/dimen_8"
@@ -135,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_14"
                 android:layout_marginTop="@dimen/dimen_8"
-                android:text="My Settings"
+                android:text="@string/my_settings"
                 android:textColor="@color/textColorPrimaryInverse"
                 android:textSize="@dimen/text_size_16" />
         </LinearLayout>
@@ -154,6 +158,7 @@
             app:layout_constraintTop_toTopOf="@id/settings_container">
 
             <ImageView
+                android:contentDescription="@string/sign_in"
                 android:id="@+id/logo"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="@dimen/dimen_50"
