--- a/app/src/main/res/layout/activity_task_reminder.xml
+++ b/app/src/main/res/layout/activity_task_reminder.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src ="@drawable/ic_add"
-        android:layout_gravity="right|bottom"
+        android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/dimen_24"
         app:backgroundTint="@color/colorPrimary"
         app:background="@color/colorPrimary"
