--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -56,6 +56,7 @@
             tools:text="9:00am . Wed 24 " />
 
         <android.support.v7.widget.AppCompatEditText
+            android:maxLength="45"
             android:id="@+id/task_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +78,7 @@
             android:background="@drawable/grey_border"
             android:gravity="start"
             android:hint="@string/description"
-            android:inputType="textCapSentences"
+            android:inputType="textMultiLine|textCapSentences"
             android:maxLines="6"
             android:padding="@dimen/dimen_4"
             app:layout_constraintLeft_toLeftOf="parent"
